<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raisa_io</name>
  <version>0.0.0</version>
  <description>raisa_io</description>
  <maintainer email="pandustantra@gmail.com">Pandu Surya Tantra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>pandu_ros2_kit</depend>
  <depend>pcl_conversions</depend>
  <depend>raisa_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>