cmake_minimum_required(VERSION 3.8)
project(raisa_routine)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(var_dependencies
    ds4_driver_msgs
    nav_msgs
    pandu_ros2_kit
    raisa_interfaces
    rclcpp
    std_srvs
    tf2_geometry_msgs)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(Boost REQUIRED COMPONENTS filesystem)
foreach(dependency ${var_dependencies})
  find_package(${dependency} REQUIRED)
endforeach()

include_directories(include)

add_executable(routine src/routine_main.cpp src/routine_motion.cpp
                       src/routine_process.cpp)
ament_target_dependencies(routine ${var_dependencies})
target_link_libraries(routine Boost::filesystem)

install(TARGETS routine DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights comment the
  # line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo) comment the line
  # when this package is in a git repo and when a copyright and license is added
  # to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
